--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -67,7 +67,7 @@
               </ListBox.ItemsPanel>
 
               <ListBoxItem>
-                <Grid Classes="view_mode" ColumnDefinitions="32,*,Auto,Auto,Auto">
+                <Grid Classes="view_mode" ColumnDefinitions="32,*,Auto,Auto,Auto,Auto">
                   <Path Grid.Column="0" Width="12" Height="12" Data="{StaticResource Icons.Histories}"/>
                   <TextBlock Grid.Column="1" Classes="primary" Text="{DynamicResource Text.Histories}"/>
                   <ToggleButton Grid.Column="2"
@@ -91,6 +91,13 @@
                                 ToolTip.Tip="{DynamicResource Text.Repository.FirstParentFilterToggle}">
                     <Path Width="12" Height="12" Data="{StaticResource Icons.FirstParentFilter}"/>
                   </ToggleButton>
+                  <Button Grid.Column="5"
+                          Classes="icon_button"
+                          Width="28" Height="26"
+                          Click="OnSwitchHistoriesOrderClicked"
+                          ToolTip.Tip="{DynamicResource Text.Repository.HistoriesOrder}">
+                    <Path Width="12" Height="12" Margin="0,2,0,0" Data="{StaticResource Icons.Order}"/>
+                  </Button>
                 </Grid>
               </ListBoxItem>
 
@@ -524,7 +531,7 @@
 
     <!-- Right -->
     <Grid Grid.Column="2" RowDefinitions="Auto,Auto,*"> 
-      <Grid Grid.Row="0" Height="28" ColumnDefinitions="*,Auto,Auto,Auto" Background="{DynamicResource Brush.Conflict}" IsVisible="{Binding InProgressContext, Converter={x:Static ObjectConverters.IsNotNull}}">
+      <Grid Grid.Row="0" Height="28" ColumnDefinitions="*,Auto,Auto" Background="{DynamicResource Brush.Conflict}" IsVisible="{Binding InProgressContext, Converter={x:Static ObjectConverters.IsNotNull}}">
         <ContentControl Grid.Column="0" Margin="8,0" Content="{Binding InProgressContext}">
           <ContentControl.DataTemplates>
             <DataTemplate DataType="vm:CherryPickInProgress">
@@ -557,14 +564,6 @@
           </Button.IsVisible>
         </Button>
         <Button Grid.Column="2" 
-                Classes="flat primary" 
-                FontWeight="Regular"
-                BorderThickness="0"
-                Content="{DynamicResource Text.Repository.Continue}" 
-                Padding="8,0" Margin="4,0" 
-                Command="{Binding ContinueMerge}" 
-                IsVisible="{Binding !HasUnsolvedConflicts}"/>
-        <Button Grid.Column="3" 
                 Classes="flat" 
                 FontWeight="Regular"
                 BorderThickness="0"
@@ -582,8 +581,19 @@
         </Border.IsVisible>
 
         <Grid Height="28" ColumnDefinitions="Auto,*,Auto">
-          <TextBlock Grid.Column="0" Margin="8,0,0,0" Classes="table_header" Text="{DynamicResource Text.Repository.FilterCommitPrefix}"/>
-
+          <Path Grid.Column="0"
+                Margin="8,0,0,0"
+                Width="12" Height="12"
+                Data="{StaticResource Icons.Filter}"
+                Fill="{DynamicResource Brush.FG2}"
+                IsVisible="{Binding HistoriesFilterMode, Converter={x:Static ObjectConverters.Equal}, ConverterParameter={x:Static m:FilterMode.Included}}"/>
+          <Path Grid.Column="0"
+                Margin="8,0,0,0"
+                Width="12" Height="12"
+                Data="{StaticResource Icons.EyeClose}"
+                Fill="{DynamicResource Brush.FG2}"
+                IsVisible="{Binding HistoriesFilterMode, Converter={x:Static ObjectConverters.Equal}, ConverterParameter={x:Static m:FilterMode.Excluded}}"/>
+          
           <ItemsControl Grid.Column="1" Margin="8,0,0,0" ItemsSource="{Binding Settings.HistoriesFilters}">
             <ItemsControl.ItemsPanel>
               <ItemsPanelTemplate>
@@ -593,29 +603,23 @@
             
             <ItemsControl.ItemTemplate>
               <DataTemplate DataType="m:Filter">
-                <Grid Height="20" Margin="0,0,6,0">
-                  <Border BorderThickness="1"
-                          BorderBrush="Green"
-                          CornerRadius="12"
-                          IsVisible="{Binding Mode, Converter={x:Static ObjectConverters.Equal}, ConverterParameter={x:Static m:FilterMode.Included}}"/>
-
-                  <Border BorderThickness="1"
-                          BorderBrush="Red"
-                          CornerRadius="12"
-                          IsVisible="{Binding Mode, Converter={x:Static ObjectConverters.Equal}, ConverterParameter={x:Static m:FilterMode.Excluded}}"/>
-
+                <Border Height="20"
+                        Margin="0,0,6,0"
+                        CornerRadius="12"
+                        BorderThickness="1"
+                        BorderBrush="{Binding Mode, Converter={x:Static c:FilterModeConverters.ToBorderBrush}}">
                   <StackPanel Orientation="Horizontal" Margin="8,0">
                     <Path Width="10" Height="10" Data="{StaticResource Icons.Branch}" IsVisible="{Binding IsBranch}"/>
                     <Path Width="10" Height="10" Data="{StaticResource Icons.Tag}" IsVisible="{Binding !IsBranch}"/>
                     <TextBlock Classes="primary" Text="{Binding Pattern, Converter={x:Static c:StringConverters.TrimRefsPrefix}}" Margin="4,0,0,0"/>
                   </StackPanel>
-                </Grid>
+                </Border>
               </DataTemplate>
             </ItemsControl.ItemTemplate>
           </ItemsControl>
           
-          <Button Grid.Column="2" Classes="icon_button" Command="{Binding ClearHistoriesFilter}">
-            <TextBlock Margin="16,0,8,0" Text="{DynamicResource Text.Repository.ClearAllCommitsFilter}" Foreground="{DynamicResource Brush.Accent}"/>
+          <Button Grid.Column="2" Classes="icon_button" Command="{Binding ClearHistoriesFilter}" ToolTip.Tip="{DynamicResource Text.Repository.ClearAllCommitsFilter}">
+            <Path Width="14" Height="14" Margin="16,0,8,0" Data="{StaticResource Icons.RemoveAll}"/>
           </Button>
         </Grid>
       </Border>
