--- a/src/Views/Checkout.axaml
+++ b/src/Views/Checkout.axaml
@@ -32,21 +32,22 @@
                  HorizontalAlignment="Right" VerticalAlignment="Center"
                  Margin="0,0,8,0"
                  Text="{DynamicResource Text.Checkout.LocalChanges}"/>
-      <WrapPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center">        
+      <WrapPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center">
+        <WrapPanel.Resources>
+          <ac:EnumToBoolConverter x:Key="EnumToBoolConverter"/>
+        </WrapPanel.Resources>
+        
         <RadioButton Content="{DynamicResource Text.CreateBranch.LocalChanges.DoNothing}"
-                     x:Name="RadioDoNothing"
                      GroupName="LocalChanges"
                      Margin="0,0,8,0"
-                     IsCheckedChanged="OnLocalChangeActionIsCheckedChanged"/>
+                     IsChecked="{Binding PreAction, Mode=TwoWay, Converter={StaticResource EnumToBoolConverter}, ConverterParameter={x:Static m:DealWithLocalChanges.DoNothing}}"/>
         <RadioButton Content="{DynamicResource Text.CreateBranch.LocalChanges.StashAndReply}"
-                     x:Name="RadioStashAndReply"
                      GroupName="LocalChanges"
                      Margin="0,0,8,0"
-                     IsCheckedChanged="OnLocalChangeActionIsCheckedChanged"/>
+                     IsChecked="{Binding PreAction, Mode=TwoWay, Converter={StaticResource EnumToBoolConverter}, ConverterParameter={x:Static m:DealWithLocalChanges.StashAndReaply}}"/>
         <RadioButton Content="{DynamicResource Text.CreateBranch.LocalChanges.Discard}"
-                     x:Name="RadioDiscard"
                      GroupName="LocalChanges"
-                     IsCheckedChanged="OnLocalChangeActionIsCheckedChanged"/>
+                     IsChecked="{Binding PreAction, Mode=TwoWay, Converter={StaticResource EnumToBoolConverter}, ConverterParameter={x:Static m:DealWithLocalChanges.Discard}}"/>
       </WrapPanel>
     </Grid>
   </StackPanel>
