--- a/src/Views/FilterModeSwitchButton.axaml
+++ b/src/Views/FilterModeSwitchButton.axaml
@@ -15,17 +15,8 @@
     <Grid>
       <Path Width="12" Height="12"
             Data="{StaticResource Icons.Eye}"
-            Fill="{DynamicResource Brush.FG2}">
-        <Path.IsVisible>
-          <MultiBinding Converter="{x:Static BoolConverters.And}">
-            <Binding Path="#ThisControl.Mode" Converter="{x:Static ObjectConverters.Equal}" ConverterParameter="{x:Static m:FilterMode.None}"/>
-            <MultiBinding Converter="{x:Static BoolConverters.Or}">
-              <Binding Path="#ThisControl.IsNoneVisible"/>
-              <Binding Path="#ThisControl.IsContextMenuOpening"/>              
-            </MultiBinding>
-          </MultiBinding>
-        </Path.IsVisible>
-      </Path>
+            Fill="{DynamicResource Brush.FG2}"
+            IsVisible="{Binding #ThisControl.Mode, Converter={x:Static ObjectConverters.Equal}, ConverterParameter={x:Static m:FilterMode.None}}"/>
 
       <Path Width="12" Height="12"
             Data="{StaticResource Icons.Filter}"
