fix: typo on icon naming
- Changed Calender by Calendar

--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -1082,7 +1082,7 @@
                 HorizontalAlignment="Left"
                 VerticalAlignment="Center">
           <Path x:Name="ChevronPath"
-                Data="{StaticResource Icons.Calender}"
+                Data="{StaticResource Icons.Calendar}"
                 Fill="{DynamicResource Brush.FG1}"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
