--- a/src/Views/TextDiffView.axaml
+++ b/src/Views/TextDiffView.axaml
@@ -30,6 +30,7 @@
                                          UseSyntaxHighlighting="{Binding Source={x:Static vm:Preference.Instance}, Path=UseSyntaxHighlighting}"
                                          WordWrap="{Binding Source={x:Static vm:Preference.Instance}, Path=EnableDiffViewWordWrap}"
                                          ShowHiddenSymbols="{Binding Source={x:Static vm:Preference.Instance}, Path=ShowHiddenSymbolsInDiffView}"
+                                         CurrentChangeBlockIdx="{Binding #ThisControl.CurrentChangeBlockIdx}"
                                          EnableChunkSelection="{Binding #ThisControl.EnableChunkSelection}"
                                          SelectedChunk="{Binding #ThisControl.SelectedChunk, Mode=TwoWay}"/>
             
@@ -61,6 +62,7 @@
                                            UseSyntaxHighlighting="{Binding Source={x:Static vm:Preference.Instance}, Path=UseSyntaxHighlighting}"
                                            WordWrap="False"
                                            ShowHiddenSymbols="{Binding Source={x:Static vm:Preference.Instance}, Path=ShowHiddenSymbolsInDiffView}"
+                                           CurrentChangeBlockIdx="{Binding #ThisControl.CurrentChangeBlockIdx}"
                                            EnableChunkSelection="{Binding #ThisControl.EnableChunkSelection}"
                                            SelectedChunk="{Binding #ThisControl.SelectedChunk, Mode=TwoWay}"/>
 
@@ -82,6 +84,7 @@
                                            UseSyntaxHighlighting="{Binding Source={x:Static vm:Preference.Instance}, Path=UseSyntaxHighlighting}"
                                            WordWrap="False"
                                            ShowHiddenSymbols="{Binding Source={x:Static vm:Preference.Instance}, Path=ShowHiddenSymbolsInDiffView}"
+                                           CurrentChangeBlockIdx="{Binding #ThisControl.CurrentChangeBlockIdx}"
                                            EnableChunkSelection="{Binding #ThisControl.EnableChunkSelection}"
                                            SelectedChunk="{Binding #ThisControl.SelectedChunk, Mode=TwoWay}"/>
             
