--- a/src/Views/DiffView.axaml
+++ b/src/Views/DiffView.axaml
@@ -34,6 +34,15 @@
 
           <!-- Toolbar Buttons -->
           <StackPanel Grid.Column="3" Margin="8,0,0,0" Orientation="Horizontal" VerticalAlignment="Center">
+            <ToggleButton Classes="line_path"
+              Width="28"
+              Command="{Binding ToggleHighlightedDiffNavigation}"
+              IsChecked="{Binding Source={x:Static vm:Preference.Instance}, Path=EnableChangeBlocks, Mode=OneWay}"
+              IsVisible="{Binding IsTextDiff}"
+              ToolTip.Tip="{DynamicResource Text.Diff.HighlightedDiffNavigation}">
+              <Path Width="13" Height="13" Data="{StaticResource Icons.Highlight}" Margin="0,3,0,0"/>
+            </ToggleButton>
+
             <Button Classes="icon_button"
                     Width="28"
                     Click="OnGotoPrevChange"
@@ -41,6 +50,18 @@
                     ToolTip.Tip="{DynamicResource Text.Diff.Prev}">
               <Path Width="12" Height="12" Stretch="Uniform" Margin="0,6,0,0" Data="{StaticResource Icons.Up}"/>
             </Button>
+
+            <TextBlock Classes="primary"
+                       Margin="0,0,0,0"
+                       Text="{Binding ChangeBlockIndicator}"
+                       FontSize="11">
+              <TextBlock.IsVisible>
+                <MultiBinding Converter="{x:Static BoolConverters.And}">
+                  <Binding Path="IsTextDiff"/>
+                  <Binding Source="{x:Static vm:Preference.Instance}" Path="EnableChangeBlocks" Mode="OneWay"/>
+                </MultiBinding>
+              </TextBlock.IsVisible>
+            </TextBlock>
 
             <Button Classes="icon_button"
                     Width="28"
@@ -124,7 +145,8 @@
 
             <ToggleButton Classes="line_path"
                           Width="28" Height="18"
-                          IsChecked="{Binding Source={x:Static vm:Preference.Instance}, Path=UseSideBySideDiff, Mode=TwoWay}"
+                          Command="{Binding ToggleTwoSideDiff}"
+                          IsChecked="{Binding Source={x:Static vm:Preference.Instance}, Path=UseSideBySideDiff, Mode=OneWay}"
                           IsVisible="{Binding IsTextDiff}"
                           ToolTip.Tip="{DynamicResource Text.Diff.SideBySide}">
               <Path Width="12" Height="12" Data="{StaticResource Icons.LayoutHorizontal}" Margin="0,2,0,0"/>
@@ -241,7 +263,8 @@
           <DataTemplate DataType="m:TextDiff">
             <v:TextDiffView 
               UseSideBySideDiff="{Binding Source={x:Static vm:Preference.Instance}, Path=UseSideBySideDiff, Mode=OneWay}"
-              UseFullTextDiff="{Binding Source={x:Static vm:Preference.Instance}, Path=UseFullTextDiff, Mode=OneWay}"/>
+              UseFullTextDiff="{Binding Source={x:Static vm:Preference.Instance}, Path=UseFullTextDiff, Mode=OneWay}"
+              CurrentChangeBlockIdx="{Binding CurrentChangeBlockIdx, Mode=OneWay}"/>
           </DataTemplate>
 
           <!-- Empty or only EOL changes -->
